--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ networks:
 services:
   lumagate-gateway:
     build:
-      context: ./gateway
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: gateway/Dockerfile
     container_name: lumagate-gateway
     ports:
       - "8080:8080"
@@ -16,8 +16,8 @@ services:
 
   servicea_v1:
     build:
-      context: ./services/v1/serviceA
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: services/v1/serviceA/Dockerfile
     container_name: servicea_v1
     restart: unless-stopped
     networks:
@@ -25,8 +25,8 @@ services:
 
   serviceb_v1:
     build:
-      context: ./services/v1/serviceB
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: services/v1/serviceB/Dockerfile
     container_name: serviceb_v1
     restart: unless-stopped
     networks:
@@ -34,8 +34,8 @@ services:
 
   servicec_v1:
     build:
-      context: ./services/v1/serviceC
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: services/v1/serviceC/Dockerfile
     container_name: servicec_v1
     restart: unless-stopped
     networks:
@@ -43,8 +43,8 @@ services:
 
   servicea_v2:
     build:
-      context: ./services/v2/serviceA
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: services/v2/serviceA/Dockerfile
     container_name: servicea_v2
     restart: unless-stopped
     networks:
@@ -52,8 +52,8 @@ services:
 
   serviceb_v2:
     build:
-      context: ./services/v2/serviceB
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: services/v2/serviceB/Dockerfile
     container_name: serviceb_v2
     restart: unless-stopped
     networks:
@@ -61,8 +61,8 @@ services:
 
   servicec_v2:
     build:
-      context: ./services/v2/serviceC
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: services/v2/serviceC/Dockerfile
     container_name: servicec_v2
     restart: unless-stopped
     networks:
