--- a/services/v2/serviceB/Dockerfile
+++ b/services/v2/serviceB/Dockerfile
@@ -1,10 +1,9 @@
 FROM golang:1.22-alpine AS builder
 WORKDIR /app
 COPY . .
-RUN go build -o /bin/serviceB_v2 ./
+RUN go build -o /bin/serviceB_v2 ./services/v2/serviceB
 
 FROM alpine:3.19
 COPY --from=builder /bin/serviceB_v2 /usr/local/bin/serviceB_v2
 EXPOSE 9012
 ENTRYPOINT ["/usr/local/bin/serviceB_v2"]
-
