--- a/services/v2/serviceC/Dockerfile
+++ b/services/v2/serviceC/Dockerfile
@@ -1,10 +1,9 @@
 FROM golang:1.22-alpine AS builder
 WORKDIR /app
 COPY . .
-RUN go build -o /bin/serviceC_v2 ./
+RUN go build -o /bin/serviceC_v2 ./services/v2/serviceC
 
 FROM alpine:3.19
 COPY --from=builder /bin/serviceC_v2 /usr/local/bin/serviceC_v2
 EXPOSE 9013
 ENTRYPOINT ["/usr/local/bin/serviceC_v2"]
-
