--- a/services/v1/serviceA/Dockerfile
+++ b/services/v1/serviceA/Dockerfile
@@ -1,9 +1,9 @@
-FROM golang:1.22-alpine AS builder
+FROM mirror.gcr.io/library/golang:1.22-alpine AS builder
 WORKDIR /app
 COPY . .
 RUN go build -o /bin/serviceA_v1 ./services/v1/serviceA
 
-FROM alpine:3.19
+FROM mirror.gcr.io/library/alpine:3.19
 COPY --from=builder /bin/serviceA_v1 /usr/local/bin/serviceA_v1
 EXPOSE 9001
 ENTRYPOINT ["/usr/local/bin/serviceA_v1"]
