--- a/services/v1/serviceC/Dockerfile
+++ b/services/v1/serviceC/Dockerfile
@@ -1,9 +1,9 @@
-FROM golang:1.22-alpine AS builder
+FROM mirror.gcr.io/library/golang:1.22-alpine AS builder
 WORKDIR /app
 COPY . .
 RUN go build -o /bin/serviceC_v1 ./services/v1/serviceC
 
-FROM alpine:3.19
+FROM mirror.gcr.io/library/alpine:3.19
 COPY --from=builder /bin/serviceC_v1 /usr/local/bin/serviceC_v1
 EXPOSE 9003
 ENTRYPOINT ["/usr/local/bin/serviceC_v1"]
